syntax = "proto3";

package buf.validate;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Buf.Validate";


message ListMinMaxTest {
  repeated string items = 1 [(buf.validate.field) = {repeated:{min_items:1, max_items:2}}];
}

message Theater {
  map<string, int32> movieTicketPrice = 9;
}

message User {
  // User's name, must be at least 1 character long.
  string name = 1 [(buf.validate.field).string.min_len = 1];
}

message Transaction {
  google.protobuf.Timestamp purchase_date = 1;
  google.protobuf.Timestamp delivery_date = 2;

  option (buf.validate.message).cel = {
    id: "transaction.delivery_date",
    message: "Delivery date must be after purchase date",
    expression: "this.delivery_date > this.purchase_date"
  };
}

message Product {
  string price = 1 [(buf.validate.field).cel = {
    id: "product.price",
    message: "Price must be positive and include a valid currency symbol ($ or £)",
    expression: "(this.startsWith('$') || this.startsWith('£')) && double(this.substring(1)) > 0"
  }];
}
